assets/css/style.css
@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,800italic,800,700,700italic,600,400italic,600italic");

html {
  background: url("../../background.jpg") center top no-repeat;
  background-size: cover;
  position: relative;
  min-height: 100%;
  padding-bottom: 70px;
}

body {
  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 15px;
  color: #333333;
  background-color: rgba(0, 0, 0, 0.0);
}

.background {
  background: rgba(0, 0, 0, 0.2);
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: -1;
}

.clearfix:after {
  content: ".";
  display: block;
  height: 0;
  clear: both;
  visibility: hidden;
}

.clearfix {
  display: inline-block;
}

* html .clearfix {
  height: 1%;
}

.clearfix {
  display: block;
}

.navbar-static-top {
  border-bottom: 1px solid #e5e5e5;
  -moz-box-shadow: 0 3px 2px -2px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0 3px 2px -2px rgba(0, 0, 0, 0.2);
  box-shadow: 0 3px 2px -2px rgba(0, 0, 0, 0.2);
  box-sizing: border-box;
}

@media (min-width: 768px) {
  .section {
    width: 100%;
    display: table;
    max-width: none;
    height: calc(100vh - 150px);
  }

  .content {
    display: table-cell;
    vertical-align: middle;
  }
}

.playing-now {
  margin-left: 280px;
  position: relative;
}

.cover {
  background: url("../../artwork.jpg");
  background-size: 250px 250px;
  background-repeat: no-repeat;
  height: 250px;
}

.title, .artist {
  margin: 0px;
  line-height: normal;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.btn-links {
  position: absolute;
  bottom: 0;
  margin-bottom: 5px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  min-height: 50px;
  padding: 10px 0;
  background-color: #f9f9f9;
  border-top: 1px solid #e5e5e5;
  -moz-box-shadow: 0 -3px 2px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0 -3px 2px rgba(0, 0, 0, 0.2);
  box-shadow: 0 -3px 2px rgba(0, 0, 0, 0.2);
  box-sizing: border-box;
}

.navbar-footer {
  display: table;
  height: 100%;
  width: 100%;
}

.navbar-footer:after {
  content: "";
  display: table;
  clear: both;
}

.navbar-footer .footer-content {
  display: table-cell;
  vertical-align: middle;
}

.footer-content div {
  display: inline-block;
  vertical-align: middle;
}

.media-controls {
  text-align: left;
}

@media (min-width: 768px) {
  .media-controls {
    text-align: right;
  }
}

.current-song {
  padding-left: 10px;
}

.volume-slider {
  padding: 0 10px;
}

.volume-slider #volumeSlider {
  width: 150px;
}

@media (max-width: 767px) {
  .volume-slider {
    width: calc(100% - 64px);
  }

  .volume-slider #volumeSlider {
    width: 100%;
  }
}

.btn-circle {
  width: 30px;
  height: 30px;
  text-align: center;
  padding: 6px 0;
  font-size: 12px;
  line-height: 1.428571429;
  border-radius: 15px;
}

.btn-circle.btn-lg {
  width: 50px;
  height: 50px;
  padding: 10px 16px;
  font-size: 18px;
  line-height: 1.33;
  border-radius: 25px;
}

.btn-circle.btn-xl {
  width: 70px;
  height: 70px;
  padding: 10px 16px;
  font-size: 24px;
  line-height: 1.33;
  border-radius: 35px;
}

.media-controls .btn-circle {
  text-align: right !important;
  margin-right: 10px;
}

